# pipechat-voice-agent

./: .gitignore  Dockerfile  README.md  bot.py  bts.jsonc  custom_tts.py  package-lock.json  package.json
apps/api/: bot.py  custom_tts.py  env.example  export_openapi.py  export_openapi_minimal.py  main.py  openapi.json  pyproject.toml  server.py  tts_with_timing_processor.py
apps/web/: .env.example  openapi-ts.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/avatar/: page.tsx
apps/web/src/components/: TalkingHead.tsx  VoiceControl.tsx  loader.tsx
apps/web/src/hooks/: useLiveKitRoom.ts
apps/web/src/lib/: token-service.ts
apps/web/src/lib/api-client/: sdk.gen.ts  types.gen.ts
docs/: implementation-plan.md  live-implementation.md  livekit-pipecat-guide.md  walkthrough-2.3.md
